samples/_failures_safe/1760886940_9a844d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_789f4f51.c: In function ‘read_token’:
./samples/SAFE/__tmp_789f4f51.c:153:5: error: expected expression at end of input
  153 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_789f4f51.c:153:5: error: expected declaration or statement at end of input
